--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://guhbezerra.github.io/cartao-visita/style.css">
     <title>Cartão Visita</title>
 </head>
   
